--- a/model_sim.rmd
+++ b/model_sim.rmd
@@ -56,7 +56,7 @@ The second choice rule includes an additional exploration bonus term, which scal
 exploration_bonus <- matrix(nrow = nrow(sim_data), ncol = 4)
 for (t in 1:(nrow(sim_data)-1)){
   if(sim_data$trialnum[t]==1){
-    exploration_bonus[t,] <- 0
+    exploration_bonus[t,] <- 1
   }
   for (i in 1:4){
      # for each arm, see check the last time that it was chosen
@@ -97,3 +97,46 @@ loo_compare(loo_delta_SM, loo_delta_SME)
 ```
 
 The second model with directed exploration bonus term fit the simulated data better.
+
+The third choice rule additionally takes into account perserveration - the arm chosen in the immediate last trial received a perserveration bonus (free parameter persev).
+
+```{r}
+sim_fit_delta_SMEP <- stan(
+  file = "delta_SMEP.stan",  # Stan program
+  data = sim_data_list_1,    # named list of data
+  chains = 4,             # number of Markov chains
+  warmup = 200,          # number of warmup iterations per chain
+  iter = 400,            # total number of iterations per chain
+  cores = 4
+  )
+
+print(sim_fit_delta_SMEP, pars = c("beta_mu","beta_sigma","eta_mu","eta_sigma","alpha_mu","alpha_sigma","phi_mu","phi_sigma","persev_mu","persev_sigma"))
+stan_hist(sim_fit_delta_SMEP, pars = c("beta_mu","beta_sigma","alpha_mu","alpha_sigma","phi_mu","phi_sigma","persev_mu","persev_sigma"))
+
+# LOOCV 
+loo_delta_SMEP <- loo(sim_fit_delta_SMEP)
+loo_compare(loo_delta_SME, loo_delta_SMEP)
+```
+
+The two models with and without perserveration component have similar predictive powers.
+
+Lastly, the fourth choice rule that we will combine with the delta learning rule includes a random exploration bonus, which is discounted by the total uncertainty across all the arms (cf. Chakroun et al., 2020; Gershman, 2018).
+
+```{r}
+sim_fit_delta_SMEPR <- stan(
+  file = "delta_SMEPR.stan",  # Stan program
+  data = sim_data_list_1,    # named list of data
+  chains = 4,             # number of Markov chains
+  warmup = 200,          # number of warmup iterations per chain
+  iter = 400,            # total number of iterations per chain
+  cores = 4
+  )
+print(sim_fit_delta_SMEPR, pars = c("beta_mu","beta_sigma","eta_mu","eta_sigma","alpha_mu","alpha_sigma","phi_mu","phi_sigma","persev_mu","persev_sigma","gamma_mu","gamma_sigma"))
+
+stan_hist(sim_fit_delta_SMEPR, pars = c("beta_mu","beta_sigma","alpha_mu","alpha_sigma","phi_mu","phi_sigma","persev_mu","persev_sigma","gamma_mu","gamma_sigma"))
+
+loo_delta_SMEPR <- loo(sim_fit_delta_SMEPR)
+loo_compare(loo_delta_SME, loo_delta_SMEP, loo_delta_SMEPR)
+```
+
+Here, the posterior for random exploration bonus hyperparameter is above 0, indicating that there's no strong evidence for random exploration bonus (not surprising given that the simulated data did not have a random exploration bonus). This model does not have significantly higher predictive power than the two previous models.
