--- a/pilot_data_analysis.rmd
+++ b/pilot_data_analysis.rmd
@@ -76,7 +76,7 @@ Preproc wrapper: Run this to apply the preproc functions to all files in the dat
 #s1_filelist <- list.files(path="C:/Users/cityi/Box/Projects/Context_RL/Data/S1", pattern="*.csv", full.names=T)
 #s2_filelist <- list.files(path="C:/Users/cityi/Box/Projects/Context_RL/Data/S2", pattern="*.csv", full.names=T)
 
-s1_filelist <- list.files(path="~/Downloads", pattern="*.csv", full.names=T)
+s1_filelist <- list.files(path="~/Downloads/contextRLpilotData", pattern="*.csv", full.names=T)
 #initialize lists to hold each participant's cleaned data
 learn_data <- c()
 #test_data <- c()
@@ -120,8 +120,10 @@ View(learn_data)
 ### model-free analysis of choice data
 
 ```{r}
+# filter out trials 101-150 for pilot subject 1
+learn_data <- filter(learn_data, learn_trial_n <= 100)
 # % best door as function of time on task
-bin_size = 15
+bin_size = 10
 learn_data <- learn_data %>%
   mutate(trial_bin = case_when(
     learn_trial_n < bin_size + 1 ~ 1,
@@ -140,7 +142,7 @@ learn_data %>%
   summarise(p_optimal = sum(best_door_chosen)/bin_size)%>%
   mutate(trial_bin = as.factor(trial_bin))%>%
   ggplot(aes(x = trial_bin, y = p_optimal))+
-  #geom_boxplot()+
+  geom_boxplot()+
   geom_point(aes(color = trial_bin))
 ```
 
@@ -149,7 +151,7 @@ learn_data %>%
 We can try fitting the model with directed exploration bonus, perserveration bonus, and random exploration bonus.
 
 ```{r}
-learn_data$ID <- 1
+learn_data$ID <- as.numeric(as.factor(learn_data$ID))
 # compute exploration bonus for delta learning rule
 exploration_bonus <- matrix(nrow = nrow(learn_data), ncol = 4)
 for (t in 1:(nrow(learn_data)-1)){
@@ -158,18 +160,18 @@ for (t in 1:(nrow(learn_data)-1)){
   }
   for (i in 1:4){
      # for each arm, see check the last time that it was chosen
-    if(length(which(learn_data$chosen_door_num[(1+(learn_data$ID[t]-1)*150):t] %in% i))==0){
-      exploration_bonus[t+1,i] <- t - (learn_data$ID[t]-1)*150 # hasn't been chosen before
-    }else{
-      exploration_bonus[t+1,i] <- t - (max(which(learn_data$chosen_door_num[(1+(learn_data$ID[t]-1)*150):t] %in% i)) + (learn_data$ID[t]-1)*150)
-    }
+      if(length(which(learn_data$chosen_door_num[(1+(learn_data$ID[t]-1)*100):t] %in% i))==0){
+        exploration_bonus[t+1,i] <- t - (learn_data$ID[t]-1)*100 # hasn't been chosen before
+      }else{
+        exploration_bonus[t+1,i] <- t - (max(which(learn_data$chosen_door_num[(1+(learn_data$ID[t]-1)*100):t] %in% i)) + (learn_data$ID[t]-1)*100)
+      }
   }
 }
 
 pilot_data_list  <- list(
              totalTrials = nrow(learn_data), 
-             #nSubjects = length(unique(learn_data$ID)), 
-             #subject = learn_data$ID, 
+             nSubjects = length(unique(learn_data$ID)), 
+             subject = learn_data$ID, 
              trialNum = learn_data$learn_trial_n,
              choices = learn_data$chosen_door_num, 
              rewards = learn_data$reward,
@@ -178,7 +180,7 @@ pilot_data_list  <- list(
 
 library(rstan)
 pilot_fit_delta_SMEPR <- stan(
-  file = "delta_SMEPR_1sub.stan",  # Stan program
+  file = "delta_SMEPR.stan",  # Stan program
   data = pilot_data_list,    # named list of data
   chains = 4,             # number of Markov chains
   warmup = 200,          # number of warmup iterations per chain
@@ -186,8 +188,42 @@ pilot_fit_delta_SMEPR <- stan(
   cores = 4
   )
 
-traceplot(pilot_fit_delta_SMEPR, pars = c("beta","alpha","phi","persev","gamma"))
-stan_hist(pilot_fit_delta_SMEPR, pars = c("beta","alpha","phi","persev","gamma"))
+traceplot(pilot_fit_delta_SMEPR, pars = c("beta_mu","beta_sigma","eta_mu","eta_sigma","alpha_mu","alpha_sigma","phi_mu","phi_sigma","persev_mu","persev_sigma","gamma_mu","gamma_sigma"))
+print(pilot_fit_delta_SMEPR, pars = c("beta_mu","beta_sigma","eta_mu","eta_sigma","alpha_mu","alpha_sigma","phi_mu","phi_sigma","persev_mu","persev_sigma","gamma_mu","gamma_sigma"))
+stan_hist(pilot_fit_delta_SMEPR, pars = c("beta_mu","alpha_mu","phi_mu","persev_mu","gamma_mu"))
+
+```
+We can also look at model with Bayesian learning rule where the trial-by-trial learning rate (Kalman gain) depends on reward uncertainty:
+```{r}
+wrangled_choice <- learn_data$chosen_door_num %>% as.matrix() %>% matrix(nrow = length(unique(learn_data$ID)), ncol = max(learn_data$learn_trial_n))
+wrangled_reward <- learn_data$reward %>% as.matrix() %>% matrix(nrow = length(unique(learn_data$ID)), ncol = max(learn_data$learn_trial_n))
+pilot_data_list_1  <- list(
+             nSubjects = length(unique(learn_data$ID)), 
+             nTrials = max(learn_data$learn_trial_n),
+             choices = wrangled_choice,
+             rewards = wrangled_reward
+             ) 
+
+## using the bayesian model that I wrote
+pilot_data_list_bayes <- list(
+             totalTrials = nrow(learn_data), 
+             nSubjects = length(unique(learn_data$ID)), 
+             subject = learn_data$ID, 
+             trialNum = learn_data$learn_trial_n,
+             choices = learn_data$chosen_door_num, 
+             rewards = learn_data$reward
+)
+
+pilot_fit_Bayes_SMEP <- stan(
+  file = "Bayes_SMEP.stan",  # Stan program
+  data = pilot_data_list_bayes,    # named list of data
+  chains = 4,             # number of Markov chains
+  warmup = 200,          # number of warmup iterations per chain
+  iter = 400,            # total number of iterations per chain
+  cores = 4
+  )
+
+traceplot(pilot_fit_Bayes_SMEP, pars = c("beta_mu","beta_sigma","phi_mu","phi_sigma","persev_mu","persev_sigma"))
 
 ```
 
@@ -204,23 +240,25 @@ fit_summary <- as.data.frame(t(summary(pilot_fit_delta_SMEPR)$summary))
 
 # expected values
 Q <- fit_summary %>%
-  select(-c(alpha,beta,phi,persev,gamma,lp__)) %>%
+  select(grep("Q", colnames(fit_summary)))%>%
   slice(1) %>%
   as.matrix() %>%
-  matrix(nrow = 4, ncol = 150) %>%
+  matrix(nrow = 4, ncol = nrow(learn_data)) %>%
   t() %>%
   as.data.frame(row.names = T)
 
+door_key <- c("red","blue","purple","yellow")
 plot(Q$V1, ylim=c(0,100),
      xlab="trial",ylab="expected reward", 
      typ='l', col=door_key[1])
 lines(Q$V2, col=door_key[2])
 lines(Q$V3, col=door_key[3])
 lines(Q$V4, col=door_key[4])
-points(reward_schedule$V1, col=door_key[2],pch=20)
-points(reward_schedule$V2, col=door_key[1],pch=20)
-points(reward_schedule$V3, col=door_key[4],pch=20)
-points(reward_schedule$V4, col=door_key[3],pch=20)
+#points(rep(reward_schedule$V1[1:100],3), col=door_key[2],pch=20)
+#points(rep(reward_schedule$V2[1:100],3), col=door_key[4],pch=20)
+#points(rep(reward_schedule$V3[1:100],3), col=door_key[1],pch=20)
+#points(rep(reward_schedule$V4[1:100],3), col=door_key[3],pch=20)
+abline(v = c(100,200))
 
 # directed exploration bonus
 plot(exploration_bonus[,1], ylim=c(0,30),
@@ -275,7 +313,7 @@ learn_data %>%
   mutate(percent_choices = n/bin_size) %>%
   mutate(trial_bin = as.factor(trial_bin)) %>%
   ggplot(aes(x = trial_bin, y = percent_choices))+
-  geom_point(aes(color = choice_type))
+  geom_boxplot(aes(color = choice_type))
 ```
 
 
