--- a/Prolific_RL.rmd
+++ b/Prolific_RL.rmd
@@ -165,13 +165,32 @@ bayes_data_list_1 <- list(
 )
 
 # running MCMC
-fit_Bayes_SMEP <- Bayes_SMEP_mod$sample(
-  data = bayes_data_list_1, 
-  chains = 2, 
-  parallel_chains = 2,
-  iter_warmup = 100,          # number of warmup iterations per chain
-  iter_sampling = 100
-)
-fit_Bayes_SMEP$print(c("beta_mu","beta_sigma","phi_mu","phi_sigma","persev_mu","persev_sigma"))
-fit_Bayes_SMEP$print(c("beta_diff","phi_diff","perserv_diff"))
+fit_Bayes_SMEP_cond <- stan(
+  file = "Bayes_SMEP_cond.stan",  # Stan program
+  data = bayes_data_list_1,    # named list of data
+  chains = 4,             # number of Markov chains
+  warmup = 200,          # number of warmup iterations per chain
+  iter = 400,            # total number of iterations per chain
+  cores = 4
+  )
+
+traceplot(fit_Bayes_SMEP_cond, pars = c("beta_mu","beta_sigma","phi_mu","phi_sigma","persev_mu","persev_sigma"))
+print(fit_Bayes_SMEP_cond, pars = c("beta_mu","beta_sigma","phi_mu","phi_sigma","persev_mu","persev_sigma", 
+  "beta_diff","phi_diff","persev_diff"))
+# 
+# fit_Bayes_SMEP <- Bayes_SMEP_mod$sample(
+#   data = bayes_data_list_1, 
+#   chains = 2, 
+#   parallel_chains = 2,
+#   iter_warmup = 100,          # number of warmup iterations per chain
+#   iter_sampling = 100
+# )
+# fit_Bayes_SMEP$print(c("beta_mu","beta_sigma","phi_mu","phi_sigma","persev_mu","persev_sigma"))
+# fit_Bayes_SMEP$print(c("beta_diff","phi_diff","perserv_diff"))
+# stanfit <- rstan::read_stan_csv(fit_Bayes_SMEP$output_files())
+
+stan_hist(fit_Bayes_SMEP_cond, pars = c("beta_mu","beta_sigma","phi_mu","phi_sigma","persev_mu","persev_sigma", 
+  "beta_diff","phi_diff","persev_diff"))
 ```
+
+There seems to be both a significant difference in beta and phi hyperparameters, where people in the imperative condition tended to place more weight on expected value when making bandit choices (beta), and those in the interrogative condition valued resolving uncertainty more (directed exploration, phi). However, compared to the values from Chakroun et al., these beta_mu's are really low, persev_mu rather large.
