fit Bayes_SMEP_cond (with tight priors) to full dataset

--- a/Prolific_RL.rmd
+++ b/Prolific_RL.rmd
@@ -151,8 +151,21 @@ fit_Bayes_SMEP <- stan(
 We expect that participants in the interrogative condition would have greater directed exploration compared to participants in the imperative condition, while the other parameters would not necessarily differ. We can model them as two separate populations and estimate the *difference* in directed exploration, random exploration, and perserveration between the two groups.
 
 ```{r}
-library(cmdstanr)
-Bayes_SMEP_mod <- cmdstan_model("Bayes_SMEP_cond.stan")
+# library(cmdstanr)
+# Bayes_SMEP_mod <- cmdstan_model("Bayes_SMEP_cond.stan")
+# 
+# fit_Bayes_SMEP <- Bayes_SMEP_mod$sample(
+#   data = bayes_data_list_1, 
+#   chains = 2, 
+#   parallel_chains = 2,
+#   iter_warmup = 100,          # number of warmup iterations per chain
+#   iter_sampling = 100
+# )
+# fit_Bayes_SMEP$print(c("beta_mu","beta_sigma","phi_mu","phi_sigma","persev_mu","persev_sigma"))
+# fit_Bayes_SMEP$print(c("beta_diff","phi_diff","perserv_diff"))
+# stanfit <- rstan::read_stan_csv(fit_Bayes_SMEP$output_files())
+
+
 # new data list with condition information
 bayes_data_list_1 <- list(
              totalTrials = nrow(learn_data), 
@@ -170,27 +183,22 @@ fit_Bayes_SMEP_cond <- stan(
   data = bayes_data_list_1,    # named list of data
   chains = 4,             # number of Markov chains
   warmup = 200,          # number of warmup iterations per chain
-  iter = 400,            # total number of iterations per chain
+  iter = 700,            # total number of iterations per chain
   cores = 4
   )
 
-traceplot(fit_Bayes_SMEP_cond, pars = c("beta_mu","beta_sigma","phi_mu","phi_sigma","persev_mu","persev_sigma"))
+traceplot(fit_Bayes_SMEP_cond, pars = c("beta_mu","beta_sigma","phi_mu","phi_sigma","persev_mu","persev_sigma"), inc_warmup=T)
 print(fit_Bayes_SMEP_cond, pars = c("beta_mu","beta_sigma","phi_mu","phi_sigma","persev_mu","persev_sigma", 
   "beta_diff","phi_diff","persev_diff"))
-# 
-# fit_Bayes_SMEP <- Bayes_SMEP_mod$sample(
-#   data = bayes_data_list_1, 
-#   chains = 2, 
-#   parallel_chains = 2,
-#   iter_warmup = 100,          # number of warmup iterations per chain
-#   iter_sampling = 100
-# )
-# fit_Bayes_SMEP$print(c("beta_mu","beta_sigma","phi_mu","phi_sigma","persev_mu","persev_sigma"))
-# fit_Bayes_SMEP$print(c("beta_diff","phi_diff","perserv_diff"))
-# stanfit <- rstan::read_stan_csv(fit_Bayes_SMEP$output_files())
-
 stan_hist(fit_Bayes_SMEP_cond, pars = c("beta_mu","beta_sigma","phi_mu","phi_sigma","persev_mu","persev_sigma", 
   "beta_diff","phi_diff","persev_diff"))
+loo_fit_Bayes_SMEP_cond <- loo::loo(fit_Bayes_SMEP_cond)
+
+# plot the parameters for difference between conditions
+plot(fit_Bayes_SMEP_cond,show_density = TRUE, pars = "beta_diff")
+plot(fit_Bayes_SMEP_cond,show_density = TRUE, pars = "phi_diff")
+plot(fit_Bayes_SMEP_cond,show_density = TRUE, pars = "persev_diff")
+
 ```
 
-There seems to be both a significant difference in beta and phi hyperparameters, where people in the imperative condition tended to place more weight on expected value when making bandit choices (beta), and those in the interrogative condition valued resolving uncertainty more (directed exploration, phi). However, compared to the values from Chakroun et al., these beta_mu's are really low, persev_mu rather large.
+There seems to be both a significant difference in beta and persev hyperparameters, where people in the imperative condition tended to place more weight on expected value when making bandit choices (beta), and those in the interrogative condition valued tended to repeat their previous choice (perseveration). However, compared to the values from Chakroun et al., these beta_mu's are really low, persev_mu rather large.
